2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.addin.xml: Merged the extension points for project and
	  solution option panels into a single extension point. A single
	  extension point will now be used for all kinds of items. Extension
	  conditions can be used to make panels visible only for some
	  specific item types.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpLanguageBinding.cs, CSharpBindingCompilerManager.cs: Replaced
	  ICompilerResult/DefaultCompilerResult/CompilerResults by a new
	  BuildResult class, which has owner information at error level, so
	  it is possible to know which project generated an error when
	  building a solution. Updated Task and TaskService to use the new
	  owner information.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/OverrideCompletionData.cs, Gui/CodeGenerationPanel.cs,
	  Gui/CompilerOptionsPanelWidget.cs, CSharpBinding.addin.xml,
	  md1format.xml, CSharpBinding.mdp, Parser/Parser.cs,
	  CSharpBindingCompilerManager.cs,
	  Project/CSharpResourceIdBuilder.cs,
	  Project/CSharpCompilerParameters.cs, gtk-gui/gui.stetic,
	  Makefile.am: New project model changes.

2008-05-08  Michael Hutchinson <mhutchinson@novell.com> 

	* CSharpBinding.addin.xml: Set "isText" attribute on the mimetype
	  definitions.

2008-04-24  Mike Krüger <mkrueger@novell.com> 

	* Parser/DomParser.cs: Worked on mcs integration.

2008-04-21  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Fix indexer range crasher. Thanks
	  to Atsushi Eno and Joseph Lombrozo for spotting this.

2008-04-18  Marek Safar <marek.safar@gmail.com>

	* Parser/mcs/**: Exposed most of the type container members.

2008-04-17  Michael Hutchinson <mhutchinson@novell.com> 

	* FormattingStrategy/CSharpIndentEngine.cs: Implement
	  IDocumentStateEngine so that state tracking logic can be moved into
	  MonoDevelop.Ide.
	* Gui/CSharpTextEditorExtension.cs: Move state tracking logic into