@@ -1,3 +1,7 @@
+2008-05-27  Mike Krüger <mkrueger@novell.com> 
+
+	* Parser/DomParser.cs: Added new dom & new class browser.
+
 2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* CSharpBinding.addin.xml: Merged the extension points for project and
